Correção de erro de endereço de imagens e arquivo css.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <title>AluCar - Aluguel de Carros</title>
 </head>
 
@@ -32,9 +32,9 @@
                 melhores preços e modelos do mercado.</p>
 
             <div class="sobre__galeria">
-                <img src="/img/img1.jpg" alt="Carro">
-                <img src="/img/img2.jpg" alt="Carro">
-                <img src="/img/img3.jpg" alt="Carro">
+                <img src="img/img1.jpg" alt="Carro">
+                <img src="img/img2.jpg" alt="Carro">
+                <img src="img/img2.jpg" alt="Carro">
             </div>
 
             <p class="sobre__destaques">O compromisso da AluCar é com a qualidade.</p>
